test/compile_errors/err_no_std_alloc_requires_global_allocator.w
//! args: --no-std --alloc
//! expect-check-fail: alloc in no_std requires @[global_allocator]

@[panic_handler]
fn on_panic -> Never: unreachable()

@[entry]
fn start -> i32: 0
